# yt-dlp-subs

./: .gitignore  CLAUDE.md  README.md  install.ps1  install.sh  pyproject.toml
src/yt_dlp_subs/: __init__.py  cli.py  downloader.py  srt.py  transcription.py
tests/: test_cli.py  test_downloader.py  test_srt.py  test_transcription.py
tests/assets/: sample.mkv  sample.srt
