[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-dlp-subs"
version = "0.1.0"
description = "Download online video audio and generate subtitles with Groq Whisper transcription."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "groq>=0.9.0",
  "rich>=13.0",
  "yt-dlp>=2024.8.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
yt-dlp-subs = "yt_dlp_subs.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_dlp_subs"]

